--- a/ML3/templates/index.html
+++ b/ML3/templates/index.html
@@ -11,7 +11,7 @@
     <p><input name="list2" type="text" ></p>
     <p><input name="list3" type="text" ></p>
     <p><input name="list4" type="text" ></p>
-    <input type="submit" value="Узнать сорт">м
+    <input type="submit" value="Узнать сорт">
   <h1>{{title}}</h1>
   </p>
 </form>
